# Microservice

./: .gitignore  LICENSE  README.md  postservice  postservice.base  requirements.txt  setup.cfg  setup.py  tox.ini  userservice  webservice
.github/workflows/: python-app.yml
docs/: temp.txt
src/: requirements.txt  run.py
src/Broker/: API.py  MDP.py  Majordomo_broker.py  broker.py  client.py  clientAPI.py  service.py  service2.py  serviceAPI.py  test.py  utils.py
src/Broker/PubSubTest/: Test_Broker.py  pub.py  sub.py  sub2.py
src/FilterService/: filter.py
src/PostService/: __init__.py  model.py  post_service.py  posts.db  run.bat
src/UserService/: __init__.py  model.py  run.bat  user_service.py  users.db
src/common/: MDP.py  clientAPI.py  consumerAPI.py  producerAPI.py  serviceAPI.py  utils.py
src/flaskblog/: __init__.py  config.py  models.py  run.py  site.db  site_old.db
src/flaskblog/main/: routes.py
src/flaskblog/posts/: controller.py  routes.py
src/flaskblog/templates/: home.html  layout.html  post.html  user_posts.html
src/flaskblog/users/: controller.py  forms.py  routes.py  utils.py
src/package_1/: __init__.py  forms.py  main.py  route.py
src/package_1/templates/: layout.html
tests/: __init__.py  test_main.py
